test/TestPhases/typechecker/invalid/PrevConst.blc
module

const p: int64 = 7
activity main ()()
    var x: int64
    x = prev p
    await false
end
